<resources>
    <string name="app_name">aliseontv</string>
    <string name="start">START</string>
    <string name="check_phone">Your  Mobile  Authentication  is  required  to  use  the ALISEON Services.</string>
    <string name="aliseon_register_ad">In case of the purchase of goods, You may be required to join the ALISEON membership.</string>
    <string name="input_phone"> Enter the mobile number</string>
    <string name="code_number"> Enter the authentication code</string>
    <string name="send">send</string>
    <string name="check">next</string>
    <string name="language_setting">Language setting</string>
    <string name="want_setting">Select your language, country, currency</string>
    <string name="complete">Complete</string>
    <string name="skip">Skip</string>
    <string name="account_management">Account management</string>
    <string name="selectaccount">Select your account to use the services.</string>
    <string name="accountmax">The registration of the account is limited for 3 accounts. \nIf you want to add the additional account, please remove your registered account.</string>
    <string name="addaccount">Add account</string>
    <string name="logout">Logout</string>
    <string name="accountchangeorremove">Account Change/Remove</string>
    <string name="want_account">If you want to use the selected account, click the ‘Change’ button, \nor to remove the selected account, click the ‘Remove’ button.</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="disconnect">Disconnect</string>
    <string name="accountchange">Account Change</string>
    <string name="select_account_phonenumber">The mobile authentication is required to use the selected account.</string>
    <string name="account_disconnect">To disconnect your account form ALISEON, the mobile authentication is required.</string>
    <string name="still_valid">However, your ALISEON account is still valid.\nYou can use your ALISEON account in the mobile application.</string>
    <string name="aliseon_register_account">The mobile number registered in ALISEON is required.</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="productinformation">Product</string>
    <string name="videolist">Video List</string>
    <string name="creator">Creator</string>
    <string name="all">All</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="cart">Cart</string>
    <string name="alertdialog_networkinfo">The internet connection is not smooth. Please check the network and try again.</string>
    <string name="alertdialog_maxaccount">You can add up to three accounts. If you want to add it, please delete the existing account before adding it.</string>
    <string name="alertdialog_minaccount">At least one account must be added.</string>
    <string name="alertdialog_notvaild">The Mobile Number is not valid. Please make sure the Number is Registered with ALISEON.</string>
    <string name="alertdialog_notnumber">The Registered Number and the Entered Number are different. Please Check and Enter again.</string>
    <string name="delete">Delete</string>

    <string name="todayacon">A-Trend of the day</string>
    <string name="popularvideos">Popular Videos</string>
    <string name="loading">Loading...</string>
    <string name="productdetail">Product Detail</string>

    <string name="nocontents">There is no content.</string>
    <string name="nofollowers">There is no followers.</string>
    <string name="addcart">Add Cart</string>

    <string name="subscriber">Subscriber</string>
    <string name="contents">Contents</string>
    <string name="recommendationCreator">Recommentation Creator</string>

    <string name="freedeliv">Free Delivery for orders above</string>
    <string name="order">ORDER</string>
    <string name="selectoption">Select Option</string>
    <string name="stock">Stock</string>

    <string name="backbutton">Press the "backbutton" once more to exit.</string>

    <string name="items">items</string>
    <string name="totalprice">Total Price</string>

    <string name="nextvideo">The next video is played after</string>
    <string name="second">seconds</string>

    <string name="nousersubscribemaintitle">Watch the subscribe video</string>
    <string name="nousersubscribesubtitle">Please login to view the subscribe page.</string>
    <string name="nousercartmaintitle">Check the shopping cart list</string>
    <string name="nousercartsubtitle">Please login to check the shopping cart page.</string>
    <string name="nousermymaintitle">Watch my video</string>
    <string name="nousermysubtitle">Please login to view the my page.</string>
    <string name="nousersettingaccountmanagementmaintitle">Watch Connect account</string>
    <string name="nousersettingaccountmanagementsubtitle">Please login to view the account page.</string>
    <string name="login">Login</string>

    <string name="addcartitem">Registered in your shopping cart. Shall we check the shopping cart?</string>
    <string name="noaddcartitem">Please choose a product.</string>

</resources>
